--- a/accordion/style.css
+++ b/accordion/style.css
@@ -1,43 +1,43 @@
-*{
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
     margin: 0;
-    padding: 0;
-}
-
-body{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.container{
-    margin-top: 20px;
-    width: 80%;
-    border-radius: 20px;
+    font-family: "Cairo", sans-serif;
+  }
+  
+  .accordion {
+    width: 300px;
+  }
+  
+  .accordion-item {
+    margin-bottom: 5px;
+  }
+  
+  .accordion-header {
+    background-color: #000000;
+    padding: 10px;
+    cursor: pointer;
+    font-weight: bold;
+    color: white;
+  }
+  
+  .accordion-content {
+    transition: max-height 0.6s ease;
+    padding: 10px;
     overflow: hidden;
-}
-
-.quest{
-    padding: 10px;
-    text-align: left;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: gray;
-}
-
-#answer{
-    padding: 10px;
-    background-color: rgba(128, 128, 128, 0.506);
+    background-color: #333333;
+    color: white;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    max-height: 0;
     display: none;
-}
-
-#sign{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    background-color: pink;
-    height: 20px;
-    width: 20px;
-}
+  }
+  
+  .accordion-content.active {
+    display: block;
+    max-height: 1000px;
+  }
+  
